add endpoint add member to a team
